--- a/tests/HelloWorldWPF/MainWindow.xaml
+++ b/tests/HelloWorldWPF/MainWindow.xaml
@@ -1,30 +1,53 @@
-﻿<Window x:Class="HalloWeltWPF.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:lex="http://wpflocalizeextension.codeplex.com"
-        lex:LocalizeDictionary.DesignCulture="en"
-        lex:LocalizeDictionary.IncludeInvariantCulture="False"
-        lex:ResxLocalizationProvider.DefaultAssembly="HelloWorldWPF"
-        lex:ResxLocalizationProvider.DefaultDictionary="Ressourcen"
-        SizeToContent="WidthAndHeight"
-        ResizeMode="NoResize"
-        Title="{lex:Loc Title}"
-        Background="{lex:Loc Background}"
-        FlowDirection="{lex:Loc FlowDirection}" WindowStartupLocation="CenterScreen">
-    <StackPanel VerticalAlignment="Center" HorizontalAlignment="Center" Margin="50,20">
+﻿<Window
+    x:Class="HalloWeltWPF.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:lex="http://wpflocalizeextension.codeplex.com"
+    Title="{lex:Loc Title}"
+    lex:LocalizeDictionary.DesignCulture="en"
+    Background="{lex:Loc Background}"
+    FlowDirection="{lex:Loc FlowDirection}"
+    ResizeMode="NoResize"
+    SizeToContent="WidthAndHeight"
+    WindowStartupLocation="CenterScreen">
+    <StackPanel
+        Margin="50,20"
+        HorizontalAlignment="Center"
+        VerticalAlignment="Center">
         <StackPanel.LayoutTransform>
             <ScaleTransform ScaleX="2.0" ScaleY="2.0" />
         </StackPanel.LayoutTransform>
-        <TextBlock Name="MyLabel" FontSize="20" Text="{lex:Loc}" HorizontalAlignment="Center" />
+        <TextBlock
+            Name="MyLabel"
+            HorizontalAlignment="Center"
+            FontSize="20"
+            Text="{lex:Loc}" />
         <StackPanel Orientation="Horizontal">
-            <Button Content="{lex:Loc de}" Margin="5" CommandParameter="de" Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}" />
-            <Button Content="{lex:Loc en}" Margin="5" CommandParameter="en" Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}" />
-            <Button Content="{lex:Loc he}" Margin="5" CommandParameter="he" Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}" />
-            <Button Content="{lex:Loc ar}" Margin="5" CommandParameter="ar" Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}" />
+            <Button
+                Margin="5"
+                Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}"
+                CommandParameter="de"
+                Content="{lex:Loc de}" />
+            <Button
+                Margin="5"
+                Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}"
+                CommandParameter="en"
+                Content="{lex:Loc en}" />
+            <Button
+                Margin="5"
+                Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}"
+                CommandParameter="he"
+                Content="{lex:Loc he}" />
+            <Button
+                Margin="5"
+                Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}"
+                CommandParameter="ar"
+                Content="{lex:Loc ar}" />
         </StackPanel>
-        <ComboBox ItemsSource="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=MergedAvailableCultures}"
-                  SelectedItem="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=Culture}"
-                  DisplayMemberPath="NativeName"
-                  Margin="2"/>
+        <ComboBox
+            Margin="2"
+            DisplayMemberPath="NativeName"
+            ItemsSource="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=MergedAvailableCultures}"
+            SelectedItem="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=Culture}" />
     </StackPanel>
 </Window>
