--- a/tests/AssemblyTest/MainWindow.xaml
+++ b/tests/AssemblyTest/MainWindow.xaml
@@ -1,40 +1,51 @@
-﻿<Window x:Class="AssemblyTest.MainWindow"
-        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:lex="http://wpflocalizeextension.codeplex.com"
-        xmlns:Example="clr-namespace:ProviderExample;assembly=ProviderExample"
-        xmlns:Ext="clr-namespace:XAMLMarkupExtensions.Strings;assembly=XAMLMarkupExtensions"
-        xmlns:Local="clr-namespace:AssemblyTest"
-        xmlns:c="clr-namespace:System.Collections.Generic;assembly=mscorlib"
-        xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
-        xmlns:sys="clr-namespace:System;assembly=mscorlib"
-        lex:LocalizeDictionary.DesignCulture="en"
-        lex:LocalizeDictionary.OutputMissingKeys="True"
-        lex:ResxLocalizationProvider.DefaultAssembly="AssemblyTestResourceLib"
-        lex:ResxLocalizationProvider.DefaultDictionary="Strings"
-        Title="MainWindow"
-        mc:Ignorable="d"
-        d:DataContext="{d:DesignInstance Type={x:Type Local:MyViewModel}, IsDesignTimeCreatable=True}"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" Height="479" Width="329">
+﻿<Window
+    x:Class="AssemblyTest.MainWindow"
+    xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:Example="clr-namespace:ProviderExample;assembly=ProviderExample"
+    xmlns:Ext="clr-namespace:XAMLMarkupExtensions.Strings;assembly=XAMLMarkupExtensions"
+    xmlns:Local="clr-namespace:AssemblyTest"
+    xmlns:c="clr-namespace:System.Collections.Generic;assembly=mscorlib"
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:lex="http://wpflocalizeextension.codeplex.com"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:scm="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+    xmlns:sys="clr-namespace:System;assembly=mscorlib"
+    Title="MainWindow"
+    Width="329"
+    Height="479"
+    d:DataContext="{d:DesignInstance Type={x:Type Local:MyViewModel},
+                                     IsDesignTimeCreatable=True}"
+    lex:LocalizeDictionary.DesignCulture="en"
+    lex:LocalizeDictionary.OutputMissingKeys="True"
+    lex:ResxLocalizationProvider.DefaultAssembly="AssemblyTestResourceLib"
+    lex:ResxLocalizationProvider.DefaultDictionary="Strings"
+    mc:Ignorable="d">
 
-    <!--Use this syntax to set the inheriting provider-->
-    <!--lex:LocalizeDictionary.DefaultProvider="{x:Static lex:InheritingResxLocalizationProvider.Instance}"
+    <!--  Use this syntax to set the inheriting provider  -->
+    <!--
+        lex:LocalizeDictionary.DefaultProvider="{x:Static lex:InheritingResxLocalizationProvider.Instance}"
         lex:InheritingResxLocalizationProvider.DefaultAssembly="AssemblyTestResourceLib"
-        lex:InheritingResxLocalizationProvider.DefaultDictionary="Strings"-->
+        lex:InheritingResxLocalizationProvider.DefaultDictionary="Strings"
+    -->
 
-    <!-- **********************************************************************
-    Uncomment the block below to test the CSV provider for the entire window
-    or copy it to an arbitrary location to affect just the particular sub tree.
-    Note: Values can only be resolved at design-time if the project is set as
-    StartUp project in Visual Studio.
-    This provider is not tested under Blend.
-    ************************************************************************-->
+    <!--
+        **********************************************************************
+        Uncomment the block below to test the CSV provider for the entire window
+        or copy it to an arbitrary location to affect just the particular sub tree.
+        Note: Values can only be resolved at design-time if the project is set as
+        StartUp project in Visual Studio.
+        This provider is not tested under Blend.
+        ************************************************************************
+    -->
     <!--<lex:LocalizeDictionary.Provider>
         <Example:CSVLocalizationProvider FileName="Example" HasHeader="True" />
     </lex:LocalizeDictionary.Provider>-->
     <Window.Resources>
-        <Example:CSVLocalizationProvider x:Key="CSVProvider" FileName="Example" HasHeader="True" />
+        <Example:CSVLocalizationProvider
+            x:Key="CSVProvider"
+            FileName="Example"
+            HasHeader="True" />
 
         <DataTemplate x:Key="TestTemplate">
             <Border>
@@ -54,12 +65,32 @@
                         <RowDefinition />
                     </Grid.RowDefinitions>
                     <lex:LocBinding Source="{Binding FlagSource}" Target="{x:Reference LocalizedImage}" />
-                    <Image Grid.RowSpan="3" Grid.Column="0" Height="50" Source="{x:Reference LocalizedImage}" />
-                    <Label Grid.Row="0" Grid.Column="1" Content="{lex:Loc Country}" />
-                    <Label Grid.Row="0" Grid.Column="2" Content="{Binding Country}" />
-                    <Label Grid.Row="1" Grid.Column="1" Content="{lex:Loc Area}" />
-                    <Local:StringFormatProxy x:Name="SFP" Value="{Binding Area}" StringFormat="{lex:Loc TestFormat}" />
-                    <TextBlock Padding="5" Grid.Row="1" Grid.Column="2" Text="{Binding Result, ElementName=SFP}" />
+                    <Image
+                        Grid.RowSpan="3"
+                        Grid.Column="0"
+                        Height="50"
+                        Source="{x:Reference LocalizedImage}" />
+                    <Label
+                        Grid.Row="0"
+                        Grid.Column="1"
+                        Content="{lex:Loc Country}" />
+                    <Label
+                        Grid.Row="0"
+                        Grid.Column="2"
+                        Content="{Binding Country}" />
+                    <Label
+                        Grid.Row="1"
+                        Grid.Column="1"
+                        Content="{lex:Loc Area}" />
+                    <Local:StringFormatProxy
+                        x:Name="SFP"
+                        StringFormat="{lex:Loc TestFormat}"
+                        Value="{Binding Area}" />
+                    <TextBlock
+                        Grid.Row="1"
+                        Grid.Column="2"
+                        Padding="5"
+                        Text="{Binding Result, ElementName=SFP}" />
                 </Grid>
             </Border>
         </DataTemplate>
@@ -80,32 +111,86 @@
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
             <RowDefinition Height="Auto" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
-        <ComboBox ItemsSource="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=MergedAvailableCultures}"
-                  SelectedItem="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=Culture}"
-                  DisplayMemberPath="NativeName"
-                  Margin="2"/>
-        <StackPanel Name="TestPanel" Grid.Row="1" Orientation="Horizontal" HorizontalAlignment="Center" lex:ResxLocalizationProvider.DefaultDictionary="Strings2">
-            <Button Name="ButtonDE" Height="23" Width="75" CommandParameter="de" Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}" lex:ResxLocalizationProvider.DefaultAssembly="AssemblyTestResourceLib">
+        <ComboBox
+            Margin="2"
+            DisplayMemberPath="NativeName"
+            ItemsSource="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=MergedAvailableCultures}"
+            SelectedItem="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=Culture}" />
+        <StackPanel
+            Name="TestPanel"
+            Grid.Row="1"
+            HorizontalAlignment="Center"
+            lex:ResxLocalizationProvider.DefaultDictionary="Strings2"
+            Orientation="Horizontal">
+            <Button
+                Name="ButtonDE"
+                Width="75"
+                Height="23"
+                lex:ResxLocalizationProvider.DefaultAssembly="AssemblyTestResourceLib"
+                Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}"
+                CommandParameter="de">
                 <lex:FELoc />
             </Button>
-            <Button Content="{lex:Loc ButtonEN, Converter={StaticResource CaseConverter}, ConverterParameter=Lower}" Height="23" Width="75" CommandParameter="" Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}" />
-            <Button Content="{lex:Loc ButtonEN}" Height="23" Width="75" CommandParameter="" Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}" />
+            <Button
+                Width="75"
+                Height="23"
+                Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}"
+                CommandParameter=""
+                Content="{lex:Loc ButtonEN,
+                                  Converter={StaticResource CaseConverter},
+                                  ConverterParameter=Lower}" />
+            <Button
+                Width="75"
+                Height="23"
+                Command="{Binding Source={x:Static lex:LocalizeDictionary.Instance}, Path=SetCultureCommand}"
+                CommandParameter=""
+                Content="{lex:Loc ButtonEN}" />
         </StackPanel>
-        <Button Grid.Row="2" HorizontalAlignment="Center" Name="ButtonAssembly" Click="ButtonAssembly_Click" Content="{lex:LocText FormatSegment1=A}" Width="{lex:Loc}" Margin="{lex:Loc}" Background="{lex:Loc}" FlowDirection="{lex:Loc}" />
-        <Image Grid.Row="3" Source="{lex:Loc TestImage}" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
-        <ListBox Grid.Row="4" ItemTemplate="{DynamicResource TestTemplate}" lex:ResxLocalizationProvider.DefaultAssembly="AssemblyTest" lex:ResxLocalizationProvider.DefaultDictionary="CountryRes">
-            <Local:Countries Country="Austria" CountryDE="Österreich" Area="83855" />
-            <Local:Countries Country="France" CountryDE="Frankreich" Area="543965" />
-            <Local:Countries Country="Germany" CountryDE="Deutschland" Area="357039" />
-            <Local:Countries Country="United Kingdom" CountryDE="Großbrittanien" Area="244103" />
+        <Button
+            Name="ButtonAssembly"
+            Grid.Row="2"
+            Width="{lex:Loc}"
+            Margin="{lex:Loc}"
+            HorizontalAlignment="Center"
+            Background="{lex:Loc}"
+            Click="ButtonAssembly_Click"
+            Content="{lex:LocText FormatSegment1=A}"
+            FlowDirection="{lex:Loc}" />
+        <Image
+            Grid.Row="3"
+            HorizontalAlignment="Stretch"
+            VerticalAlignment="Stretch"
+            Source="{lex:Loc TestImage}" />
+        <ListBox
+            Grid.Row="4"
+            lex:ResxLocalizationProvider.DefaultAssembly="AssemblyTest"
+            lex:ResxLocalizationProvider.DefaultDictionary="CountryRes"
+            ItemTemplate="{DynamicResource TestTemplate}">
+            <Local:Countries
+                Area="83855"
+                Country="Austria"
+                CountryDE="Österreich" />
+            <Local:Countries
+                Area="543965"
+                Country="France"
+                CountryDE="Frankreich" />
+            <Local:Countries
+                Area="357039"
+                Country="Germany"
+                CountryDE="Deutschland" />
+            <Local:Countries
+                Area="244103"
+                Country="United Kingdom"
+                CountryDE="Großbrittanien" />
         </ListBox>
         <!--<TextBlock Grid.Row="5" Text="{Binding ElementName=Proxy, Path=Result}">
             <lex:LocProxy Name="Proxy" PrependType="True"
                           Source="{Binding EnumValue}" />
         </TextBlock>-->
         <TextBlock Grid.Row="5" Text="{Binding ElementName=Proxy, Path=Result}">
-            <lex:EnumRun PrependType="True" EnumValue="{Binding EnumValue}" />
+            <lex:EnumRun EnumValue="{Binding EnumValue}" PrependType="True" />
         </TextBlock>
         <!--<TextBox Grid.Row="5" lex:ResxLocalizationProvider.DefaultAssembly="AssemblyTest" lex:ResxLocalizationProvider.DefaultDictionary="CountryRes">
             <TextBox.Text>
@@ -115,7 +200,12 @@
                 </Ext:CatExtension>
             </TextBox.Text>
         </TextBox>-->
-        <lex:EnumComboBox Grid.Row="6" Margin="2" PrependType="True" lex:LocalizeDictionary.Provider="{StaticResource ResourceKey=CSVProvider}" Type="{x:Type Local:TestEnum}">
+        <lex:EnumComboBox
+            Grid.Row="6"
+            Margin="2"
+            lex:LocalizeDictionary.Provider="{StaticResource ResourceKey=CSVProvider}"
+            PrependType="True"
+            Type="{x:Type Local:TestEnum}">
             <!--<lex:EnumComboBox.ItemTemplate>
                 <DataTemplate>
                     <TextBlock><lex:EnumRun EnumValue="{Binding}" PrependType="{Binding PrependType, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=lex:EnumComboBox}}" /></TextBlock>
@@ -163,11 +253,27 @@
             <FlowDocument>
                 <Paragraph>
                     <!--<Run Text="{lex:Loc ButtonDE}" />-->
-                    <Run Name="TestObject" lex:ResxLocalizationProvider.DefaultAssembly="AssemblyTest" lex:ResxLocalizationProvider.DefaultDictionary="Resource.With.Dot" Text="{lex:Loc Test}" />
-                    <Button Content="Who is bound here?" Click="Button_Click" />
+                    <Run
+                        Name="TestObject"
+                        lex:ResxLocalizationProvider.DefaultAssembly="AssemblyTest"
+                        lex:ResxLocalizationProvider.DefaultDictionary="Resource.With.Dot"
+                        Text="{lex:Loc Test}" />
+                    <Button Click="Button_Click" Content="Who is bound here?" />
                 </Paragraph>
             </FlowDocument>
         </FlowDocumentScrollViewer>
-        <Button Grid.Row="9" Content="Multiple UI Threads" Margin="5" Click="ButtonMultiThreading_Click" />
+        <Button
+            Grid.Row="9"
+            Margin="5"
+            Click="ButtonMultiThreading_Click"
+            Content="Multiple UI Threads" />
+        <RichTextBox>
+        </RichTextBox>
+        <Button
+            Grid.Row="10"
+            Width="100"
+            Margin="5"
+            HorizontalAlignment="Center"
+            Content="Hello" />
     </Grid>
 </Window>
